feat(agent): java agent